
syntax = "proto3";

message ext_key_info
{
     string key = 1;
     string value = 2;
}

message Ip_info {
	string ip    = 1; // 本机获取到的ip
	int32  port  = 2; // 本机获取到的端口
	string sock_ip   = 3; // 服务器观测到的ip
	int32  sock_port = 4; // 服务器观测到的连接端口
}

message User_info {
	 uint32  uid = 1;
	 string  nick_name = 2;
	 string  avarta_url = 3;
	 int32   is_online = 4;
	 Ip_info ip_info  = 6;
}









